@@ -159,6 +159,18 @@
                 <version>3.5.1</version>
                 <configuration>
                     <skip>true</skip>
+                    <argLine>
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+                        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED
+                        --add-opens=java.base/sun.reflect.generics.visitor=ALL-UNNAMED
+                        --add-opens=java.base/sun.reflect.generics.tree=ALL-UNNAMED
+                        --add-opens=java.base/sun.reflect.generics.scope=ALL-UNNAMED
+                        --add-opens=java.base/sun.reflect.generics.parser=ALL-UNNAMED
+                        --add-opens=java.base/sun.reflect.generics.factory=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
             <plugin>
